--- a/client/middagsdeling_app/src/App.css
+++ b/client/middagsdeling_app/src/App.css
@@ -28,11 +28,10 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MainContainer {
+  margin: auto;
+  width: 50vw;
+  border-left: 2px solid red;
+  border-right: 2px solid red;
+  height: 100vh;
 }
