--- a/client/middagsdeling_app/src/App.css
+++ b/client/middagsdeling_app/src/App.css
@@ -31,8 +31,7 @@
 .MainContainer {
   margin: auto;
   width: 50vw;
-  border-left: 2px solid red;
-  border-right: 2px solid red;
+  background-color: gainsboro;
   height: 100vh;
 }
 
