--- a/client/middagsdeling_app/src/App.css
+++ b/client/middagsdeling_app/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: #F4F4F4;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -30,18 +33,8 @@
 
 .MainContainer {
   margin: auto;
+  padding-bottom: 20px;
   width: 50vw;
-  background-color: gainsboro;
-  height: 100vh;
-}
-
-.VerticalForm {
-  flex: "0 1 auto";
-  display: "flex";
-  flex-direction: "column";
-  position: "absolute";
-  top: "50%";
-  transform: "translate(0, -50%)";
-  width: "500px";
-  padding: "20px";
+  /* background-color: gainsboro; */
+  /* height: 100vh; */
 }
