feat: update login and signup page layout and style

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -34,3 +34,10 @@
 .MainContainer {
   padding-bottom: 20px;
 }
+
+.verticalCenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
