--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -33,5 +33,10 @@ li a:hover {
   background-color: #111;
 }
 .buttonStyle {
-  color: red;
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #4962B3;
+  font-size: 12px;
+  border: 1px solid #191257;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
 }
