feat: small changes, add date to chat message

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -36,8 +36,12 @@
 }
 
 .verticalCenter {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* height: 100vh; */
 }
