--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -35,8 +35,13 @@ li a:hover {
 .buttonStyle {
   padding: 7px 19px;
   border-radius: 2px;
-  background-color: #4962B3;
+  background-color: #0d045e;
   font-size: 12px;
-  border: 1px solid #191257;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+.errorStyle {
+  background-color: #e00303;
+  border: 1px solid #530202;
+
+
 }
