--- a/front-end/src/styles/App.css
+++ b/front-end/src/styles/App.css
@@ -33,3 +33,12 @@ li a:hover {
   background-color: #111;
 }
 
+.buttonStyle {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #512D38;
+  font-size: 12px;
+  border: 1px solid #512D38;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
+
